# api/handlers/spot.go
@@ -3,9 +3,10 @@ package handlers
 import (
 	"camping-backend-with-go/api/presenter"
 	"camping-backend-with-go/pkg/entities"
-	"camping-backend-with-go/pkg/spot"
-	"github.com/gofiber/fiber/v2"
+	"camping-backend-with-go/pkg/service/spot"
 	"net/http"
+
+	"github.com/gofiber/fiber/v2"
 )
 
 // AddSpot is a function to create spot data to database
@@ -15,25 +16,40 @@ import (
 // @Accept json
 // @Produce json
 // @Param user body entities.CreateSpotInputSchema true "Create Spot"
-// @Success 200 {object} presenter.JsonResponse{data=presenter.Spot}
+// @Success 200 {object} presenter.JsonResponse{data=entities.Spot}
 // @Failure 503 {object} presenter.JsonResponse
 // @Router /spot [post]
 // @Security Bearer
 func AddSpot(service spot.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var requestBody entities.CreateSpotInputSchema
+		var jsonResponse presenter.JsonResponse
 		err := c.BodyParser(&requestBody)
 		if err != nil {
-			c.Status(http.StatusBadRequest)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
 		result, err := service.InsertSpot(&requestBody, c)
 		if err != nil {
-			c.Status(http.StatusInternalServerError)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusInternalServerError).JSON(jsonResponse)
 		}
-		return c.JSON(presenter.SpotSuccessResponse(result))
+
+		jsonResponse = presenter.JsonResponse{
+			Error:   false,
+			Message: "successfully create spot!",
+			Data:    result.ListSerialize(),
+		}
+		return c.JSON(jsonResponse)
 	}
 }
 
@@ -43,17 +59,28 @@ func AddSpot(service spot.Service) fiber.Handler {
 // @Tags Spot
 // @Accept json
 // @Produce json
-// @Success 200 {object} presenter.JsonResponse{data=[]presenter.Spot}
+// @Success 200 {object} presenter.JsonResponse{data=[]entities.Spot}
 // @Failure 503 {object} presenter.JsonResponse
 // @Router /spot [get]
 func GetSpots(service spot.Service) fiber.Handler {
+	var jsonResponse presenter.JsonResponse
 	return func(c *fiber.Ctx) error {
 		fetched, err := service.FetchSpots()
 		if err != nil {
-			c.Status(http.StatusInternalServerError)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusInternalServerError).JSON(jsonResponse)
 		}
-		return c.JSON(presenter.SpotsSuccessResponse(fetched))
+
+		jsonResponse = presenter.JsonResponse{
+			Error:   false,
+			Message: "",
+			Data:    fetched,
+		}
+		return c.JSON(jsonResponse)
 	}
 }
 
@@ -65,25 +92,41 @@ func GetSpots(service spot.Service) fiber.Handler {
 // @Produce json
 // @Param id path int true "Spot id"
 // @Param user body entities.UpdateSpotSchema true "Update Spot"
-// @Success 200 {object} presenter.JsonResponse{data=presenter.Spot}
+// @Success 200 {object} presenter.JsonResponse{data=entities.Spot}
 // @Failure 503 {object} presenter.JsonResponse
 // @Router /spot/{id} [put]
 func UpdateSpot(service spot.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var requestBody entities.Spot
+		var jsonResponse presenter.JsonResponse
 
 		err := c.BodyParser(&requestBody)
 		id, _ := c.ParamsInt("id")
 		if err != nil {
-			c.Status(http.StatusBadRequest)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 		result, err := service.UpdateSpot(&requestBody, id)
 		if err != nil {
-			c.Status(http.StatusInternalServerError)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+
+			return c.Status(http.StatusInternalServerError).JSON(jsonResponse)
 		}
-		return c.JSON(presenter.SpotSuccessResponse(result))
+
+		jsonResponse = presenter.JsonResponse{
+			Error:   false,
+			Message: "",
+			Data:    result,
+		}
+		return c.Status(http.StatusOK).JSON(jsonResponse)
 	}
 }
 
@@ -94,20 +137,31 @@ func UpdateSpot(service spot.Service) fiber.Handler {
 // @Accept json
 // @Produce json
 // @Param id path int true "Spot id"
-// @Success 200 {object} presenter.JsonResponse{data=presenter.Spot}
+// @Success 200 {object} presenter.JsonResponse{data=entities.Spot}
 // @Failure 503 {object} presenter.JsonResponse
 // @Router /spot/{id} [get]
 func GetSpot(service spot.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
+		var jsonResponse presenter.JsonResponse
 		id, _ := c.ParamsInt("id")
 		fetched, err := service.GetSpot(id)
 
 		if err != nil {
-			c.Status(http.StatusInternalServerError)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+
+			return c.Status(http.StatusInternalServerError).JSON(jsonResponse)
 		}
 
-		return c.JSON(presenter.SpotSuccessResponse(fetched))
+		jsonResponse = presenter.JsonResponse{
+			Error:   false,
+			Message: "",
+			Data:    fetched,
+		}
+		return c.Status(http.StatusOK).JSON(jsonResponse)
 	}
 }
 
@@ -119,25 +173,40 @@ func GetSpot(service spot.Service) fiber.Handler {
 // @Produce json
 // @Param id path int true "Spot id"
 // @Param user body entities.UpdateSpotSchema true "Update Spot"
-// @Success 200 {object} presenter.JsonResponse{data=presenter.Spot}
+// @Success 200 {object} presenter.JsonResponse{data=entities.Spot}
 // @Failure 503 {object} presenter.JsonResponse{}
 // @Router /spot/{id} [patch]
 func PartialUpdateSpot(service spot.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var requestBody entities.Spot
+		var jsonResponse presenter.JsonResponse
 
 		err := c.BodyParser(&requestBody)
 		id, _ := c.ParamsInt("id")
 		if err != nil {
-			c.Status(http.StatusBadRequest)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 		result, err := service.PartialUpdateSpot(&requestBody, id)
 		if err != nil {
-			c.Status(http.StatusInternalServerError)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusInternalServerError).JSON(jsonResponse)
 		}
-		return c.JSON(presenter.SpotSuccessResponse(result))
+
+		jsonResponse = presenter.JsonResponse{
+			Error:   false,
+			Message: "",
+			Data:    result,
+		}
+		return c.Status(http.StatusOK).JSON(jsonResponse)
 	}
 }
 
@@ -153,16 +222,23 @@ func PartialUpdateSpot(service spot.Service) fiber.Handler {
 // @Router /spot/{id} [delete]
 func RemoveSpot(service spot.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
+		var jsonResponse presenter.JsonResponse
 		id, _ := c.ParamsInt("id")
 		err := service.RemoveSpot(id)
 		if err != nil {
-			c.Status(http.StatusInternalServerError)
-			return c.JSON(presenter.SpotErrorResponse(err))
+			jsonResponse = presenter.JsonResponse{
+				Error:   true,
+				Message: err.Error(),
+				Data:    nil,
+			}
+			return c.Status(http.StatusInternalServerError).JSON(jsonResponse)
 		}
-		return c.JSON(&fiber.Map{
-			"status": true,
-			"data":   "delete successfully",
-			"err":    nil,
-		})
+
+		jsonResponse = presenter.JsonResponse{
+			Error:   false,
+			Message: "delete successfully",
+			Data:    nil,
+		}
+		return c.Status(http.StatusOK).JSON(jsonResponse)
 	}
 }
